# amd-hackathon

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  SUBMISSION.md  docker-compose.yml  firebase.storage.rules
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 20260711_0001_initial.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  groq.py
backend/app/api/: __init__.py  dependencies.py  router.py
backend/app/core/: config.py  errors.py
backend/app/db/: models.py  session.py
backend/app/fixtures/: __init__.py  demo.py
backend/app/knowledge/: __init__.py  crop_problems.json
backend/app/schemas/: __init__.py  assessments.py
backend/app/services/: firebase.py  images.py  pipeline.py  repository.py  retrieval.py  safety.py
backend/scripts/: benchmark.py
backend/tests/: conftest.py  helpers.py  test_api.py  test_config_and_provider.py  test_contracts.py  test_dashboard.py  test_firebase_storage.py  test_pipeline_failures.py  test_safety.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  demo.ts  firebase-storage.ts  firebase.ts  format.ts  i18n.ts  token.ts  types.ts
frontend/scripts/: start-standalone.mjs
frontend/tests/: api.test.ts  assessment-wizard.test.tsx  (+9 more)
scripts/: verify.ps1  verify.sh
(+29 files in other folders)
