[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shambalens-backend"
version = "0.1.0"
description = "Evidence-first crop triage API"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "aiosqlite>=0.20,<1",
  "asyncpg>=0.29,<1",
  "fastapi>=0.115,<1",
  "firebase-admin>=6.6,<8",
  "httpx>=0.27,<1",
  "pillow>=10.4,<12",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "python-multipart>=0.0.12,<1",
  "sqlalchemy[asyncio]>=2.0.35,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=5,<7",
  "respx>=0.21,<1",
  "ruff>=0.7,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-q --disable-warnings"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
exclude = ["alembic"]

[[tool.mypy.overrides]]
module = ["PIL.*", "firebase_admin", "firebase_admin.*", "numpy", "numpy.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.vercel]
entrypoint = "app.main:app"
